--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
-    "snyk": "^1.161.1"
+    "snyk": "^1.163.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +18,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "prepublish": "yarn run snyk-protect"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
