--- a/package.json
+++ b/package.json
@@ -3,34 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.2",
-    "snyk": "^1.163.3"
+    "redux-saga": "^1.0.5",
+    "snyk": "^1.192.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "snyk-protect": "snyk protect",
-    "prepublish": "yarn run snyk-protect"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.12",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.8.17",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.12",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.8",
+    "@types/react-redux": "^7.1.1",
     "@types/redux": "^3.6.0",
-    "tslint": "^5.16.0",
+    "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.2"
   },
   "snyk": true,
   "browserslist": {
