--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,20 @@
   "eslint.enable": true,
   "search.exclude": {
     "**/node_modules": true
-  }
+  },
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#1b321b",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#5959a6",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "titleBar.activeBackground": "#091109",
+    "titleBar.inactiveBackground": "#09110999",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "statusBar.background": "#091109",
+    "statusBarItem.hoverBackground": "#1b321b",
+    "statusBar.foreground": "#e7e7e7"
+  },
+  "peacock.color": "#091109"
 }
