--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "react-scripts": "3.0.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
-    "redux-saga": "^1.0.5",
-    "snyk": "^1.193.1"
+    "redux-saga": "^1.1.3",
+    "snyk": "^1.244.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,15 +20,15 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.15",
-    "@types/node": "^12.6.2",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.1.1",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
-    "tslint": "^5.18.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "~3.4.5"
+    "tslint": "^5.20.1",
+    "tslint-react": "^4.1.0",
+    "typescript": "~3.7.2"
   },
   "snyk": true,
   "browserslist": {
@@ -44,6 +44,6 @@
     ]
   },
   "resolutions": {
-    "lodash": "^4.17.14"
+    "lodash": "^4.17.15"
   }
 }
