--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
   },
   "workbench.colorCustomizations": {
     "activityBar.background": "#1b321b",
+    "activityBar.activeBorder": "#5959a6",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
     "activityBarBadge.background": "#5959a6",
