--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
-    "snyk": "^1.244.0"
+    "snyk": "^1.263.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,15 +20,15 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.22",
-    "@types/node": "^12.12.6",
-    "@types/react": "^16.9.11",
+    "@types/jest": "^24.0.24",
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
     "tslint": "^5.20.1",
     "tslint-react": "^4.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "^3.7.3"
   },
   "snyk": true,
   "browserslist": {
