--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
-    "redux-saga": "^1.1.3",
-    "snyk": "^1.263.0"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,7 +29,6 @@
     "tslint-react": "^4.1.0",
     "typescript": "^3.7.3"
   },
-  "snyk": true,
   "browserslist": {
     "production": [
       ">0.2%",
