--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3"
   },
   "scripts": {
