--- a/package.json
+++ b/package.json
@@ -2,33 +2,32 @@
   "name": "get-beer-react",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-scripts": "^3.3.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
+  },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.24",
-    "@types/node": "^13.1.4",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.5",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/redux": "^3.6.0",
-    "tslint": "^5.20.1",
-    "tslint-react": "^4.1.0",
-    "typescript": "^3.7.4"
+    "tslint": "^6.1.0",
+    "tslint-react": "^4.2.0",
+    "typescript": "^3.8.3"
   },
   "browserslist": {
     "production": [
@@ -43,7 +42,7 @@
     ]
   },
   "resolutions": {
-    "lodash": "^4.17.15",
-    "handlebars": "^4.5.3"
+    "lodash": ">=4.17.15",
+    "handlebars": ">=4.5.3"
   }
 }
